testsuite/tests/grammar/invalid_abstract_fields/unoverriden-abstract.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Holder(Example("example"))
}

@abstract class FooNode implements Node[FooNode] {
}

@abstract class BaseHolder : FooNode {
    @abstract @parse_field f1: FooNode
}

class Holder : BaseHolder {
    @parse_field f2: Example
}

class Example : FooNode implements TokenNode {
}
